--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,5 +27,5 @@ springdoc.api-docs.path=/v3/api-docs
 # ==========================================
 # Configuracao de rede para rodar no container
 # ==========================================
-#server.address=0.0.0.0
-#server.port=80
+server.address=0.0.0.0
+server.port=80
